--- a/cryptocurrency-price-tracker-app/src/components/Crypto.css
+++ b/cryptocurrency-price-tracker-app/src/components/Crypto.css
@@ -8,10 +8,24 @@ h1{
   margin: 0;
   padding: 0;
   font-family: 'Montserrat', sans-serif;
-  background-color: #1a1a1c;
+  /* background-color: #1a1a1c; */
   color: #fff;
 }
-
+body{
+  background-color: black;
+}
+.Togglebtn{
+  background-color: black;
+}
+.Togglebtn1{
+  background-color:lightsalmon;
+}
+.DarkBtn{
+  text-align: center;
+  border-radius: 5px;
+  /* height: 50px;
+  width: 100px; */
+}
 .coin-app {
   display: flex;
   flex-direction: column;
@@ -40,13 +54,7 @@ h1{
   border-radius: 10px;
   text-align: center;
   border: none;
-  background-image: linear-gradient(
-    -225deg,
-    #ac32e4 0%,
-    #7918f2 48%,
-    #4801ff 100%
-  );
-
+  background-color: #1c6bc0;
   color: #e2e2e2;
 }
 
